revise escape validation notebook linear regression

--- a/non-pipeline_analyses/Additional_Notebooks/17C7_EscapeValidations.ipynb
+++ b/non-pipeline_analyses/Additional_Notebooks/17C7_EscapeValidations.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "b26bcce2-6c4e-42fd-8935-2ebbe5b60566",
    "metadata": {},
    "outputs": [],
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "35a212e0-831b-41f5-b2a4-601da018ada6",
    "metadata": {},
    "outputs": [],
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "48f97d00-03c3-4bac-a8a8-136b971b534d",
    "metadata": {},
    "outputs": [
@@ -125,11 +125,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_22458/406968554.py:16: DeprecationWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
+      "/tmp/ipykernel_62904/406968554.py:16: DeprecationWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
       "  normalized_plate1 = Plate1_data_processed.groupby('Virus').apply(normalize_rlu).reset_index(drop=True)\n",
-      "/tmp/ipykernel_22458/406968554.py:19: DeprecationWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
+      "/tmp/ipykernel_62904/406968554.py:19: DeprecationWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
       "  normalized_plate2 = Plate2_data_processed.groupby('Virus').apply(normalize_rlu).reset_index(drop=True)\n",
-      "/tmp/ipykernel_22458/406968554.py:22: DeprecationWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
+      "/tmp/ipykernel_62904/406968554.py:22: DeprecationWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
       "  normalized_plate3 = Plate3_data_processed.groupby('Virus').apply(normalize_rlu).reset_index(drop=True)\n"
      ]
     }
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "661cb05e-9b7f-4c18-b83d-25324da9920a",
    "metadata": {},
    "outputs": [],
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "c4235d32-f2a5-4c93-863d-1a85beec699b",
    "metadata": {},
    "outputs": [],
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "f0006596-fedc-409c-a1c9-76f6158a3475",
    "metadata": {},
    "outputs": [],
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "881b7408-8472-4f92-a5c3-58537c521d50",
    "metadata": {},
    "outputs": [
@@ -394,7 +394,7 @@
        "[4 rows x 21 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -405,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "e7f05288-bdb2-45a6-af3d-10104121dd29",
    "metadata": {},
    "outputs": [
@@ -434,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "7465189e-f926-40c2-bbc4-bb228cb70202",
    "metadata": {},
    "outputs": [
@@ -594,7 +594,7 @@
        "[4 rows x 21 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -606,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "id": "763c3656-f162-4df1-8ad5-2c8de195b25f",
    "metadata": {},
    "outputs": [
@@ -636,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "id": "5d3ddc63-2c21-41c1-bf58-be1ce02f088a",
    "metadata": {},
    "outputs": [
@@ -804,7 +804,7 @@
        "[4 rows x 21 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -816,7 +816,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "id": "cc242a00-2bba-4f28-bfe8-c78a0b59bce3",
    "metadata": {},
    "outputs": [
@@ -846,7 +846,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 62,
    "id": "0c90dfb7-4f9d-4fb5-bb7d-96b49cd52198",
    "metadata": {},
    "outputs": [
@@ -888,13 +888,12 @@
     "# Step 3: Create DataFrame\n",
     "df = pd.DataFrame(data)\n",
     "\n",
-    "# Step 4: Display the DataFrame\n",
-    "print(df)"
+    "print(df)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 63,
    "id": "5eff7310-6d2e-4ba0-9ec5-63141c3f0de2",
    "metadata": {},
    "outputs": [],
@@ -906,7 +905,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 64,
    "id": "e76f3391-b3eb-498e-be05-2beaa2e37bdb",
    "metadata": {},
    "outputs": [
@@ -1055,7 +1054,7 @@
        "11          3    V4   L11I     0.2    0.586"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1066,7 +1065,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 65,
    "id": "624583b9-a3ce-4a14-b83e-f448dacb9c42",
    "metadata": {},
    "outputs": [
@@ -1074,7 +1073,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_22458/3272803252.py:11: DeprecationWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
+      "/tmp/ipykernel_62904/3272803252.py:11: DeprecationWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
       "  merged_IC50_fold_WT = merged_IC50.groupby('plate_num').apply(norm_by_wt_plate).reset_index(drop=True)\n"
      ]
     }
@@ -1096,7 +1095,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 66,
    "id": "ec8a09ce-0e39-4309-89e3-50ed629856e3",
    "metadata": {},
    "outputs": [],
@@ -1110,7 +1109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 67,
    "id": "fdff16f6-fa9f-43d8-9f07-f9a2fd52c008",
    "metadata": {},
    "outputs": [
@@ -1132,7 +1131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 68,
    "id": "fdb664fa-e812-4450-a563-300d97945008",
    "metadata": {},
    "outputs": [
@@ -1157,7 +1156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 69,
    "id": "cb7466ad-4960-4cb0-8380-fc5712bb5998",
    "metadata": {},
    "outputs": [
@@ -1200,7 +1199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 70,
    "id": "39738a69-5712-4184-b833-2282741e8f22",
    "metadata": {},
    "outputs": [
@@ -1248,28 +1247,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "51cdd432-4f82-4bf4-b875-5293263baa9a",
+   "execution_count": 71,
+   "id": "1f92102f-c528-44d0-8c35-302de9e43a34",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from scipy.stats import linregress\n",
-    "slope, intercept, r_value, p_value, std_err = linregress(merged_IC50_fold_WT['Escape'], merged_IC50_fold_WT['IC50_mean'])\n"
+    "#I'm dropping duplicates of the WT virus so that they are not over-counted in the regression.\n",
+    "\n",
+    "merged_IC50_fold_WT_dropWT_Duplicates = merged_IC50_fold_WT.drop_duplicates(subset=['mutant']);\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 73,
+   "id": "51cdd432-4f82-4bf4-b875-5293263baa9a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_62904/399423177.py:5: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  merged_IC50_fold_WT_dropWT_Duplicates['log_IC50_mean']=merged_IC50_fold_WT_dropWT_Duplicates['IC50_mean'].apply(lambda x: np.log10(x))\n"
+     ]
+    }
+   ],
+   "source": [
+    "from scipy.stats import linregress\n",
+    "\n",
+    "#last-minute log-transform for linear regression since we log-transformed the plot. \n",
+    "\n",
+    "merged_IC50_fold_WT_dropWT_Duplicates['log_IC50_mean']=merged_IC50_fold_WT_dropWT_Duplicates['IC50_mean'].apply(lambda x: np.log10(x))\n",
+    "slope, intercept, r_value, p_value, std_err = linregress(merged_IC50_fold_WT_dropWT_Duplicates['Escape'], merged_IC50_fold_WT_dropWT_Duplicates['log_IC50_mean'])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
    "id": "98f9b09a-a8c7-4fdb-aec4-28d88c652a5b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.8843914772809297"
+       "0.9708357597479135"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1280,8 +1309,195 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 76,
+   "id": "d9918af5-38bc-4927-ab33-d4126e47a9a9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>plate_num</th>\n",
+       "      <th>Virus</th>\n",
+       "      <th>mutant</th>\n",
+       "      <th>Escape</th>\n",
+       "      <th>IC50</th>\n",
+       "      <th>IC50_fold_WT</th>\n",
+       "      <th>IC50_mean</th>\n",
+       "      <th>IC50_std</th>\n",
+       "      <th>log_IC50_mean</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>V1</td>\n",
+       "      <td>WT</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.324</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.453</td>\n",
+       "      <td>0.114</td>\n",
+       "      <td>-0.344</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>V2</td>\n",
+       "      <td>N336S</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.06</td>\n",
+       "      <td>3.27</td>\n",
+       "      <td>1.06</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0253</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>V3</td>\n",
+       "      <td>I338T</td>\n",
+       "      <td>4.04</td>\n",
+       "      <td>5e+03</td>\n",
+       "      <td>1.54e+04</td>\n",
+       "      <td>5e+03</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>V4</td>\n",
+       "      <td>R333E</td>\n",
+       "      <td>0.4</td>\n",
+       "      <td>1.09</td>\n",
+       "      <td>3.36</td>\n",
+       "      <td>1.09</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0374</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2</td>\n",
+       "      <td>V1</td>\n",
+       "      <td>S341Y</td>\n",
+       "      <td>2.03</td>\n",
+       "      <td>335</td>\n",
+       "      <td>671</td>\n",
+       "      <td>335</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2.53</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>2</td>\n",
+       "      <td>V2</td>\n",
+       "      <td>G343R</td>\n",
+       "      <td>0.39</td>\n",
+       "      <td>0.625</td>\n",
+       "      <td>1.25</td>\n",
+       "      <td>0.625</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-0.204</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>2</td>\n",
+       "      <td>V3</td>\n",
+       "      <td>R346M</td>\n",
+       "      <td>2.93</td>\n",
+       "      <td>1.14e+03</td>\n",
+       "      <td>2.28e+03</td>\n",
+       "      <td>1.14e+03</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3.06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>3</td>\n",
+       "      <td>V1</td>\n",
+       "      <td>R346E</td>\n",
+       "      <td>2.64</td>\n",
+       "      <td>1.76e+03</td>\n",
+       "      <td>3.28e+03</td>\n",
+       "      <td>1.76e+03</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3.25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>3</td>\n",
+       "      <td>V2</td>\n",
+       "      <td>S341D</td>\n",
+       "      <td>3.88</td>\n",
+       "      <td>5e+03</td>\n",
+       "      <td>9.31e+03</td>\n",
+       "      <td>5e+03</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>3</td>\n",
+       "      <td>V4</td>\n",
+       "      <td>L11I</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>0.586</td>\n",
+       "      <td>1.09</td>\n",
+       "      <td>0.586</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-0.232</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    plate_num Virus mutant  Escape     IC50  IC50_fold_WT  IC50_mean  IC50_std  log_IC50_mean\n",
+       "0           1    V1     WT       0    0.324             1      0.453     0.114         -0.344\n",
+       "1           1    V2  N336S       1     1.06          3.27       1.06         0         0.0253\n",
+       "2           1    V3  I338T    4.04    5e+03      1.54e+04      5e+03         0            3.7\n",
+       "3           1    V4  R333E     0.4     1.09          3.36       1.09         0         0.0374\n",
+       "4           2    V1  S341Y    2.03      335           671        335         0           2.53\n",
+       "5           2    V2  G343R    0.39    0.625          1.25      0.625         0         -0.204\n",
+       "6           2    V3  R346M    2.93 1.14e+03      2.28e+03   1.14e+03         0           3.06\n",
+       "8           3    V1  R346E    2.64 1.76e+03      3.28e+03   1.76e+03         0           3.25\n",
+       "9           3    V2  S341D    3.88    5e+03      9.31e+03      5e+03         0            3.7\n",
+       "11          3    V4   L11I     0.2    0.586          1.09      0.586         0         -0.232"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#look at df for the transformation. makes sense std is 0 for most. \n",
+    "merged_IC50_fold_WT_dropWT_Duplicates"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "1a828e23-6a1b-49b5-8e44-d98752ef12e0",
+   "id": "e5dc9005-74d3-4a89-968f-e812d6de4a0e",
    "metadata": {},
    "outputs": [],
    "source": []
